# ytdlfin

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  flake.nix  pyproject.toml  renovate.json  ytdl-web-spec.md
.github/workflows/: ci.yml  docs.yml  publish-container.yml  update-flake-lock.yml
contrib/: compose.yml  ytdlfin.env.example  ytdlfin.service
docs/: brand.html  index.html  ytdlfin.css
docs/deploy/: container.html  nixos.html
docs/reference/: spec.html
nix/: module.nix
pkgs/: check-sri.nix  container.nix  default.nix  docs-serve.nix  run-tests.nix  ytdlfin.nix
tests/: conftest.py  test_db.py  test_models.py  test_nfo.py  test_routes.py  test_utils.py  test_worker.py  test_ytdlp.py
ytdlfin/: __init__.py  auth.py  db.py  main.py  models.py  nfo.py  utils.py  worker.py  ytdlp.py
ytdlfin/routers/: categories.py  downloads.py  pages.py
ytdlfin/static/: ytdlfin.css
ytdlfin/templates/: admin.html  base.html  history.html  index.html  login.html  queue_partial.html
ytdlfin/templates/partials/: category_edit_row.html  category_list.html  category_row.html  quality_select.html  queue_row.html  queue_row_edit.html
